GNOME Bugzilla – Bug 721737
Fix a couple of header issues
Last modified: 2014-01-08 16:02:31 UTC
These help evolution-data-server build on FreeBSD.
Created attachment 265592 [details] [review] Remove #include <malloc.h> from a file This ancient header has long been deprecated in favour of <stdlib.h> but this file uses GLib memory functions anyway, so neither is required.
Created attachment 265593 [details] [review] tests: #include <sys/wait.h> for WIFEXITED
Thanks, I appreciate the portability improvements. I do occasionally try to build on OpenBSD, but haven't tried FreeBSD. Committed for 3.11.4: https://git.gnome.org/browse/evolution-data-server/commit/?id=fa46f261932906c5a31dc029078927dc7655874c https://git.gnome.org/browse/evolution-data-server/commit/?id=4c381def04938dd0d35bef2ac6456738025db490