Remove #include <malloc.h> from a file

This ancient header has long been deprecated in favour of <stdlib.h> but
this file uses GLib memory functions anyway, so neither is required.

https://bugzilla.gnome.org/show_bug.cgi?id=721737