calendar/libedata-cal/e-cal-backend-intervaltree.c
@@ -36,7 +36,6 @@
 
 #include <stdio.h>
 #include <string.h>
-#include <malloc.h>
 
 #include "e-cal-backend-intervaltree.h"
 
